# pySpeedy

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg
openspeedy/: __init__.py  _constants.py  _core.py  _dll_resolver.py  _eject.py  _exceptions.py  _inject.py  _process.py  _speeddll.py  _types.py  _winapi.py
openspeedy/tests/: conftest.py  test_core.py  test_exceptions.py  test_types.py
