[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openspeedy"
version = "0.1.0"
description = "Python bindings for OpenSpeedy game speed controller — accelerate or decelerate Windows games via DLL injection"
readme = "README.md"
license = {text = "GPL-3.0-only"}
license-files = ["LICENSE"]
authors = [
    {name = "game1024", email = "game1024@users.noreply.github.com"},
]
keywords = [
    "game",
    "speed",
    "speedhack",
    "dll-injection",
    "hook",
    "windows",
    "game-hacking",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Operating System",
]
requires-python = ">=3.8"
dynamic = []

[project.urls]
Homepage = "https://github.com/game1024/OpenSpeedy"
Repository = "https://github.com/game1024/OpenSpeedy"
Issues = "https://github.com/game1024/OpenSpeedy/issues"

[tool.setuptools]
packages = ["openspeedy", "openspeedy.tests"]
include-package-data = true

[tool.setuptools.package-data]
openspeedy = ["data/*.dll"]

[tool.setuptools.exclude-package-data]
openspeedy = ["tests/*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["openspeedy/tests"]
