[metadata]
name = openspeedy
version = 0.1.0
description = Python bindings for OpenSpeedy game speed controller — accelerate or decelerate Windows games via DLL injection
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-only
author = game1024
author_email = game1024@users.noreply.github.com
url = https://github.com/game1024/OpenSpeedy
keywords = game, speed, speedhack, dll-injection, hook, windows, game-hacking
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Games/Entertainment
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Operating System

[options]
packages = openspeedy, openspeedy.tests
python_requires = >=3.8
include_package_data = True

[options.package_data]
openspeedy = data/*.dll
